[project]
name = "chronis"
version = "0.1.0"
description = "Distributed scheduler framework for multi-container environments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.10.4",
    "croniter>=2.0.1",
    "python-dateutil>=2.8.2",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.2",
    "mypy>=1.8.0",
]
# Optional adapters
aws = ["boto3>=1.34.0"]
postgres = ["psycopg2-binary>=2.9.9"]
redis = ["redis>=5.0.1", "python-redis-lock>=4.0.0"]
all = [
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "python-redis-lock>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

# Exclude directories
extend-exclude = [
    ".git",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and more
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes (includes F401: unused imports)
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by formatter)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["chronis"]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=chronis",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = ["unit: Unit tests", "integration: Integration tests"]

[dependency-groups]
dev = ["ruff>=0.14.3", "pytest>=7.4.3", "pytest-cov>=4.1.0", "mypy>=1.8.0"]
