[project]
name = "chronis"
version = "0.1.0"
description = "Distributed scheduler framework for multi-container environments"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "enginerd-kr", email = "enginerd.kr@gmail.com" }]
maintainers = [{ name = "enginerd-kr", email = "enginerd.kr@gmail.com" }]
keywords = [
    "scheduler",
    "distributed",
    "cron",
    "apscheduler",
    "job-scheduler",
    "distributed-locking",
    "multi-container",
    "multi-tenancy",
    "timezone",
    "async",
    "ai-agent",
    "llm",
    "automation",
    "workflow",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4,<4.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "tenacity>=8.0.0,<9.0.0",
    "tzdata>=2024.1",
]

[project.urls]
Homepage = "https://github.com/enginerd-kr/chronis"
Documentation = "https://github.com/enginerd-kr/chronis#readme"
Repository = "https://github.com/enginerd-kr/chronis.git"
Issues = "https://github.com/enginerd-kr/chronis/issues"
Changelog = "https://github.com/enginerd-kr/chronis/releases"

[project.optional-dependencies]
dev = [
    "ruff>=0.14.3",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.2",
    "mypy>=1.8.0",
    "types-psycopg2>=2.9.21",
]
# Optional adapters
postgres = ["psycopg2-binary>=2.9.9,<3.0.0"]
redis = ["redis>=5.0.1,<6.0.0", "python-redis-lock>=4.0.0,<5.0.0"]
all = [
    "psycopg2-binary>=2.9.9,<3.0.0",
    "redis>=5.0.1,<6.0.0",
    "python-redis-lock>=4.0.0,<5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

# Exclude directories
extend-exclude = [
    ".git",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and more
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes (includes F401: unused imports)
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by formatter)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["chronis"]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=chronis",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: Integration tests with real components (e.g., timeout handling)",
    "e2e: End-to-end tests with real timing and background execution",
    "slow: Slow-running tests (> 5 seconds) - skip with '-m \"not slow\"'",
]

[tool.coverage.run]
relative_files = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.2",
    "mypy>=1.8.0",
    "types-psycopg2>=2.9.21",
]
